feat(rest/service): basic service handle
